--- a/Vitkund/Views/Home/Index.cshtml
+++ b/Vitkund/Views/Home/Index.cshtml
@@ -550,41 +550,45 @@
 
                     <!-- Start Feture Box  -->
                     <div class="col-lg-6">
-                        <div class="col-lg-12">
-                            <div class="section-title">
-                                <h4 class="title mb--20">Key Features</h4>
+                        <div class="row">
+                            <div class="col-lg-12">
+                                <div class="section-title">
+                                    <h4 class="title mb--20">Key Features</h4>
+                                </div>
+                            </div>
+                            <ul class="rbt-list-style-1">
+                                <li><i class="feather-check"></i>Experienced & Practical Mentor</li>
+                                <li><i class="feather-check"></i>Trending Business Ideas & Skills Training</li>
+                                <li><i class="feather-check"></i>Apart from Google knowledge.</li>
+                                <li><i class="feather-check"></i>The most practical course on earth.</li>
+                                <li><i class="feather-check"></i>Not bookish knowledge, own experience material.</li>
+                                <li><i class="feather-check"></i>Create businessmen in your own language and in your own way.</li>
+                                <li><i class="feather-check"></i>SWOT Analysis</li>
+                            </ul>
+                        </div>
+                    </div>
+                        <!-- End Feture Box  -->
+                        <!-- Start Feture Box  -->
+                        <div class="col-lg-6">
+                            <div class="row">
+                                <div class="col-lg-12">
+                                    <div class="section-title">
+                                        <h4 class="title mb--20">Business Model</h4>
+                                    </div>
+                                </div>
+                                <ul class="rbt-list-style-1">
+                                    <li><i class="feather-check"></i> <a href="vitkund" target="_blank">Vitkund Gaon (Go Ahead Or Not)</a></li>
+                                    <li><i class="feather-check"></i><a href="motivational-story">Learn at your pace</li>
+                                    <li><i class="feather-check"></i> <a href="videos" target="_blank">Watch the videos at your convenience.</a></li>
+                                    <li><i class="feather-check"></i> <a href="business-ideas" target="_blank">Trending Business Ideas</a></li>
+                                    <li><i class="feather-check"></i> <a href="contact-us" target="_blank">Premium Helpdesk & Support</a></li>
+                                    <li><i class="feather-check"></i> <a href="motivational-story" target="_blank">Motivational Stories & Quotes.</a></li>
+                                    <li><i class="feather-check"></i><a href="#">Live Mentorship.</a></li>
+                                </ul>
                             </div>
                         </div>
-                        <ul class="rbt-list-style-1">
-                            <li><i class="feather-check"></i>Experienced & Practical Mentor</li>
-                            <li><i class="feather-check"></i>Trending Business Ideas & Skills Training</li>
-                            <li><i class="feather-check"></i>Apart from Google knowledge.</li>
-                            <li><i class="feather-check"></i>The most practical course on earth.</li>
-                            <li><i class="feather-check"></i>Not bookish knowledge, own experience material.</li>
-                            <li><i class="feather-check"></i>Create businessmen in your own language and in your own way.</li>
-                            <li><i class="feather-check"></i>SWOT Analysis</li>
-                        </ul>
+                        <!-- End Feture Box  -->
                     </div>
-                    <!-- End Feture Box  -->
-                    <!-- Start Feture Box  -->
-                    <div class="col-lg-6">
-                        <div class="col-lg-12">
-                            <div class="section-title">
-                                <h4 class="title mb--20">Business Model</h4>
-                            </div>
-                        </div>
-                        <ul class="rbt-list-style-1">
-                            <li><i class="feather-check"></i> <a href="vitkund" target="_blank">Vitkund Gaon (Go Ahead Or Not)</a></li>
-                            <li><i class="feather-check"></i><a href="motivational-story">Learn at your pace</li>
-                            <li><i class="feather-check"></i> <a href="videos" target="_blank">Watch the videos at your convenience.</a></li>
-                            <li><i class="feather-check"></i> <a href="business-ideas" target="_blank">Trending Business Ideas</a></li>
-                            <li><i class="feather-check"></i> <a href="contact-us" target="_blank">Premium Helpdesk & Support</a></li>
-                            <li><i class="feather-check"></i> <a href="motivational-story" target="_blank">Motivational Stories & Quotes.</a></li>
-                            <li><i class="feather-check"></i><a href="#">Live Mentorship.</a></li>
-                        </ul>
-                    </div>
-                    <!-- End Feture Box  -->
-                </div>
             </div>
         </div>
 
@@ -1271,11 +1275,7 @@
 
     </main>
 
-    <svg class="rbt-back-circle svg-inner" width="100%" height="100%" viewBox="-1 -1 102 102">
-        <path d="M50,1 a49,49 0 0,1 0,98 a49,49 0 0,1 0,-98" />
-    </svg>
- 
-
+   
     <!-- partial:index.partial -->
     <div id="myModal" class="modal" role="dialog">
         <div class="modal-dialog">
