--- a/Vitkund/Views/Home/About.cshtml
+++ b/Vitkund/Views/Home/About.cshtml
@@ -231,41 +231,45 @@
 
                     <!-- Start Feture Box  -->
                     <div class="col-lg-6">
-                        <div class="col-lg-12">
-                            <div class="section-title">
-                                <h4 class="title mb--20">Key Features</h4>
+                        <div class="row">
+                            <div class="col-lg-12">
+                                <div class="section-title">
+                                    <h4 class="title mb--20">Key Features</h4>
+                                </div>
                             </div>
+                            <ul class="rbt-list-style-1">
+                                <li><i class="feather-check"></i>Experienced & Practical Mentor</li>
+                                <li><i class="feather-check"></i>Trending Business Ideas & Skills Training</li>
+                                <li><i class="feather-check"></i>Apart from Google knowledge.</li>
+                                <li><i class="feather-check"></i>The most practical course on earth.</li>
+                                <li><i class="feather-check"></i>Not bookish knowledge, own experience material.</li>
+                                <li><i class="feather-check"></i>Create businessmen in your own language and in your own way.</li>
+                                <li><i class="feather-check"></i>SWOT Analysis</li>
+                            </ul>
                         </div>
-                        <ul class="rbt-list-style-1">
-                            <li><i class="feather-check"></i>Experienced & Practical Mentor</li>
-                            <li><i class="feather-check"></i>Trending Business Ideas & Skills Training</li>
-                            <li><i class="feather-check"></i>Apart from Google knowledge.</li>
-                            <li><i class="feather-check"></i>The most practical course on earth.</li>
-                            <li><i class="feather-check"></i>Not bookish knowledge, own experience material.</li>
-                            <li><i class="feather-check"></i>Create businessmen in your own language and in your own way.</li>
-                            <li><i class="feather-check"></i>SWOT Analysis</li>
-                        </ul>
                     </div>
                     <!-- End Feture Box  -->
                     <!-- Start Feture Box  -->
                     <div class="col-lg-6">
-                        <div class="col-lg-12">
-                            <div class="section-title">
-                                <h4 class="title mb--20">Business Model</h4>
+                        <div class="row">
+                            <div class="col-lg-12">
+                                <div class="section-title">
+                                    <h4 class="title mb--20">Business Model</h4>
+                                </div>
                             </div>
+                            <ul class="rbt-list-style-1">
+                                <li><i class="feather-check"></i>Vitkund Gaon (Go Ahead Or Not)</li>
+                                <li><i class="feather-check"></i>Learn at your pace</li>
+                                <li><i class="feather-check"></i>Watch the videos at your convenience.</li>
+                                <li><i class="feather-check"></i>Trending Business Ideas</li>
+                                <li><i class="feather-check"></i>Premium Helpdesk & Support</li>
+                                <li><i class="feather-check"></i>Motivational Stories & Quotes.</li>
+                                <li><i class="feather-check"></i>Live Mentorship.</li>
+                            </ul>
                         </div>
-                        <ul class="rbt-list-style-1">
-                            <li><i class="feather-check"></i>Vitkund Gaon (Go Ahead Or Not)</li>
-                            <li><i class="feather-check"></i>Learn at your pace</li>
-                            <li><i class="feather-check"></i>Watch the videos at your convenience.</li>
-                            <li><i class="feather-check"></i>Trending Business Ideas</li>
-                            <li><i class="feather-check"></i>Premium Helpdesk & Support</li>
-                            <li><i class="feather-check"></i>Motivational Stories & Quotes.</li>
-                            <li><i class="feather-check"></i>Live Mentorship.</li>
-                        </ul>
                     </div>
-                    <!-- End Feture Box  -->
-                </div>
+                        <!-- End Feture Box  -->
+                    </div>
             </div>
         </div>
 
