--- a/Vitkund/Views/Shared/_AdminLayout.cshtml
+++ b/Vitkund/Views/Shared/_AdminLayout.cshtml
@@ -1,13 +1,12 @@
-﻿
-<head>
+﻿<head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="keywords" content="">
     <meta name="author" content="My Gigstar">
-    <link rel="icon" href="~/admin/Content/assets/images/favicon-icon.png" type="image/x-icon">
-    <link rel="shortcut icon" href="~/admin/Content/assets/images/favicon-icon.png" type="image/x-icon">
+    <link rel="icon" href="~/Content/admin/assets/images/favicon-icon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="~/Content/admin/assets/images/favicon-icon.png" type="image/x-icon">
     <title>Admin Dashboard </title>
     <!-- Google font-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -15,29 +14,29 @@
     <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&amp;display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&amp;display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" type="text/css" href="~/admin/Content/assets/css/font-awesome.css">
+    <link rel="stylesheet" type="text/css" href="~/Content/admin/assets/css/font-awesome.css">
     <!-- ico-font-->
-    <link rel="stylesheet" type="text/css" href="~/admin/Content/assets/css/icofont.css">
+    <link rel="stylesheet" type="text/css" href="~/Content/admin/assets/css/icofont.css">
     <!-- Themify icon-->
-    <link rel="stylesheet" type="text/css" href="~/admin/Content/assets/css/themify.css">
+    <link rel="stylesheet" type="text/css" href="~/Content/admin/assets/css/themify.css">
     <!-- Flag icon-->
-    <link rel="stylesheet" type="text/css" href="~/admin/Content/assets/css/flag-icon.css">
+    <link rel="stylesheet" type="text/css" href="~/Content/admin/assets/css/flag-icon.css">
     <!-- Feather icon-->
-    <link rel="stylesheet" type="text/css" href="~/admin/Content/assets/css/feather-icon.css">
+    <link rel="stylesheet" type="text/css" href="~/Content/admin/assets/css/feather-icon.css">
     <!-- Plugins css start-->
-    <link rel="stylesheet" type="text/css" href="~/admin/Content/assets/css/scrollbar.css">
-    <link rel="stylesheet" type="text/css" href="~/admin/Content/assets/css/animate.css">
-    <link rel="stylesheet" type="text/css" href="~/admin/Content/assets/css/date-picker.css">
-    <link rel="stylesheet" type="text/css" href="~/admin/Content/assets/css/photoswipe.css">
-    <link rel="stylesheet" type="text/css" href="~/admin/Content/assets/css/dropzone.css">
+    <link rel="stylesheet" type="text/css" href="~/Content/admin/assets/css/scrollbar.css">
+    <link rel="stylesheet" type="text/css" href="~/Content/admin/assets/css/animate.css">
+    <link rel="stylesheet" type="text/css" href="~/Content/admin/assets/css/date-picker.css">
+    <link rel="stylesheet" type="text/css" href="~/Content/admin/assets/css/photoswipe.css">
+    <link rel="stylesheet" type="text/css" href="~/Content/admin/assets/css/dropzone.css">
     <!-- Plugins css Ends-->
     <!-- Bootstrap css-->
-    <link rel="stylesheet" type="text/css" href="~/admin/Content/assets/css/bootstrap.css">
+    <link rel="stylesheet" type="text/css" href="~/Content/admin/assets/css/bootstrap.css">
     <!-- App css-->
-    <link rel="stylesheet" type="text/css" href="~/admin/Content/assets/css/style.css">
-    <link id="color" rel="stylesheet" href="~/admin/Content/assets/css/color-1.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="~/Content/admin/assets/css/style.css">
+    <link id="color" rel="stylesheet" href="~/Content/admin/assets/css/color-1.css" media="screen">
     <!-- Responsive css-->
-    <link rel="stylesheet" type="text/css" href="~/admin/Content/assets/css/responsive.css">
+    <link rel="stylesheet" type="text/css" href="~/Content/admin/assets/css/responsive.css">
 </head>
 <div>
     <!-- Loader starts-->
@@ -61,7 +60,7 @@
         <div class="page-header">
             <div class="header-wrapper row m-0">
                 <div class="header-logo-wrapper col-auto p-0">
-                    <div class="logo-wrapper"><a href="index.html"><img class="img-fluid" src="~/admin/Content/assets/images/logo.png" alt=""></a></div>
+                    <div class="logo-wrapper"><a href="index.html"><img class="img-fluid" src="~/Content/admin/assets/images/logo.png" alt=""></a></div>
                     <div class="toggle-sidebar">
                         <div class="status_toggle sidebar-toggle d-flex">
                             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -92,13 +91,13 @@
                         <input class="form-control" type="text" placeholder="Search here.." aria-label="search" aria-describedby="basic-addon1">
                     </div>
                     <div class="d-md-none resp-serch-input" style="margin-right:50px; float:left;">
-                        <a href="index.html"><img class="img-fluid" src="~/admin/Content/assets/images/logo.png" alt="" style="max-width:120px;"></a>
+                        <a href="index.html"><img class="img-fluid" src="~/Content/admin/assets/images/logo.png" alt="" style="max-width:120px;"></a>
                     </div>
                 </div>
                 <div class="nav-right col-10 col-sm-6 pull-right right-header p-0">
                     <ul class="nav-menus">
                         <li class="d-md-none resp-serch-input" style="margin-right:50px; float:left;">
-                            <a href="index.html"><img class="img-fluid" src="~/admin/Content/assets/images/logo.png" alt="" style="max-width:120px;"></a>
+                            <a href="index.html"><img class="img-fluid" src="~/Content/admin/assets/images/logo.png" alt="" style="max-width:120px;"></a>
                         </li>
                         <li class="d-md-none resp-serch-input">
                             <div class="resp-serch-box"><i data-feather="search"></i></div>
@@ -135,16 +134,16 @@
             <div class="sidebar-wrapper">
                 <div>
                     <div class="logo-wrapper">
-                        <a href="index.html"><img class="img-fluid for-light" src="~/admin/Content/assets/images/logo.png" alt=""><img class="img-fluid for-dark" src="~/admin/Content/assets/images/logo/small-white-logo.png" alt=""></a>
+                        <a href="index.html"><img class="img-fluid for-light" src="~/Content/admin/assets/images/logo.png" alt=""><img class="img-fluid for-dark" src="~/Content/admin/assets/images/logo/small-white-logo.png" alt=""></a>
                         <div class="back-btn"><i class="fa fa-angle-left"></i></div>
                     </div>
-                    <div class="logo-icon-wrapper"><a href="index.html"><img class="img-fluid" src="~/admin/Content/assets/images/logo-icon.png" alt=""></a></div>
+                    <div class="logo-icon-wrapper"><a href="index.html"><img class="img-fluid" src="~/Content/admin/assets/images/logo-icon.png" alt=""></a></div>
                     <nav class="sidebar-main">
                         <div class="left-arrow" id="left-arrow"><i data-feather="arrow-left"></i></div>
                         <div id="sidebar-menu">
                             <ul class="sidebar-links" id="simple-bar">
                                 <li class="back-btn">
-                                    <a href="index.html"><img class="img-fluid" src="~/admin/Content/assets/images/logo-icon.png" alt=""></a>
+                                    <a href="index.html"><img class="img-fluid" src="~/Content/admin/assets/images/logo-icon.png" alt=""></a>
                                     <div class="mobile-back text-end"><span>Back</span><i class="fa fa-angle-right ps-2" aria-hidden="true"></i></div>
                                 </li>
                                 <li class="sidebar-list">
@@ -246,48 +245,43 @@
         </div>
     </div>
     <!-- latest jquery-->
-    <script src="~/admin/Content/assets/js/jquery-3.5.1.min.js"></script>
+    <script src="~/Content/admin/assets/js/jquery-3.5.1.min.js"></script>
     <!-- Bootstrap js-->
-    <script src="~/admin/Content/assets/js/bootstrap.bundle.min.js"></script>
+    <script src="~/Content/admin/assets/js/bootstrap.bundle.min.js"></script>
     <!-- feather icon js-->
-    <script src="~/admin/Content/assets/js/feather.min.js"></script>
-    <script src="~/admin/Content/assets/js/feather-icon.js"></script>
+    <script src="~/Content/admin/assets/js/feather.min.js"></script>
+    <script src="~/Content/admin/assets/js/feather-icon.js"></script>
     <!-- scrollbar js-->
-    <script src="~/admin/Content/assets/js/simplebar.js"></script>
-    <script src="~/admin/Content/assets/js/custom.js"></script>
+    <script src="~/Content/admin/assets/js/simplebar.js"></script>
+    <script src="~/Content/admin/assets/js/custom.js"></script>
     <!-- Sidebar jquery-->
-    <script src="~/admin/Content/assets/js/config.js"></script>
+    <script src="~/Content/admin/assets/js/config.js"></script>
     <!-- Plugins JS start-->
-    <script src="~/admin/Content/assets/js/sidebar-menu.js"></script>
-    <script src="~/admin/Content/assets/js/knob.min.js"></script>
-    <script src="~/admin/Content/assets/js/knob-chart.js"></script>
-    <script src="~/admin/Content/assets/js/apex-chart.js"></script>
-    <script src="~/admin/Content/assets/js/stock-prices.js"></script>
-    <script src="~/admin/Content/assets/js/bootstrap-notify.min.js"></script>
-    <script src="~/admin/Content/assets/js/default.js"></script>
-    <script src="~/admin/Content/assets/js/index.js"></script>
-    <script src="~/admin/Content/assets/js/datepicker.js"></script>
-    <script src="~/admin/Content/assets/js/datepicker.en.js"></script>
-    <script src="~/admin/Content/assets/js/datepicker.custom.js"></script>
-    <script src="~/admin/Content/assets/js/dropzone.js"></script>
-    <script src="~/admin/Content/assets/js/dropzone-script.js"></script>
-    <script src="~/admin/Content/assets/js/photoswipe.min.js"></script>
-    <script src="~/admin/Content/assets/js/photoswipe-ui-default.min.js"></script>
-    <script src="~/admin/Content/assets/js/photoswipe.js"></script>
-    <script src="~/admin/Content/assets/js/handlebars.js"></script>
-    <script src="~/admin/Content/assets/js/typeahead.bundle.js"></script>
-    <script src="~/admin/Content/assets/js/typeahead.custom.js"></script>
-    <script src="~/admin/Content/assets/js/handlebars.js"></script>
-    <script src="~/admin/Content/assets/js/typeahead-custom.js"></script>
-    <script src="~/admin/Content/assets/js/height-equal.js"></script>
+    <script src="~/Content/admin/assets/js/sidebar-menu.js"></script>
+    <script src="~/Content/admin/assets/js/knob.min.js"></script>
+    <script src="~/Content/admin/assets/js/knob-chart.js"></script>
+    <script src="~/Content/admin/assets/js/apex-chart.js"></script>
+    <script src="~/Content/admin/assets/js/stock-prices.js"></script>
+    <script src="~/Content/admin/assets/js/bootstrap-notify.min.js"></script>
+    <script src="~/Content/admin/assets/js/default.js"></script>
+    <script src="~/Content/admin/assets/js/index.js"></script>
+    <script src="~/Content/admin/assets/js/datepicker.js"></script>
+    <script src="~/Content/admin/assets/js/datepicker.en.js"></script>
+    <script src="~/Content/admin/assets/js/datepicker.custom.js"></script>
+    <script src="~/Content/admin/assets/js/dropzone.js"></script>
+    <script src="~/Content/admin/assets/js/dropzone-script.js"></script>
+    <script src="~/Content/admin/assets/js/photoswipe.min.js"></script>
+    <script src="~/Content/admin/assets/js/photoswipe-ui-default.min.js"></script>
+    <script src="~/Content/admin/assets/js/photoswipe.js"></script>
+    <script src="~/Content/admin/assets/js/handlebars.js"></script>
+    <script src="~/Content/admin/assets/js/typeahead.bundle.js"></script>
+    <script src="~/Content/admin/assets/js/typeahead.custom.js"></script>
+    <script src="~/Content/admin/assets/js/handlebars.js"></script>
+    <script src="~/Content/admin/assets/js/typeahead-custom.js"></script>
+    <script src="~/Content/admin/assets/js/height-equal.js"></script>
     <!-- Plugins JS Ends-->
     <!-- Theme js-->
-    <script src="~/admin/Content/assets/js/script.js"></script>
+    <script src="~/Content/admin/assets/js/script.js"></script>
     <!-- login js-->
     <!-- Plugin used-->
 </div>
-@Scripts.Render("~/bundles/jquery")
-@Scripts.Render("~/bundles/bootstrap")
-@RenderSection("scripts", required: false)
-@*</body>*@
-
