--- a/Vitkund/Views/Home/BusinessIdeas.cshtml
+++ b/Vitkund/Views/Home/BusinessIdeas.cshtml
@@ -242,7 +242,7 @@
                                 <div class="rbt-card variation-01 rbt-hover">
                                     <div class="rbt-card-img">
                                         <a href="#">
-                                            <img src="@item.Image" alt="Card image">
+                                            <img src="~/Content/Uploads/@item.Image" alt="Card image">
                                             <div class="rbt-badge-3 bg-white">
                                                 <span>-40%</span>
                                                 <span>Off</span>
