--- a/Vitkund/Views/Shared/_AdminLayout.cshtml
+++ b/Vitkund/Views/Shared/_AdminLayout.cshtml
@@ -147,7 +147,7 @@
                                     <div class="mobile-back text-end"><span>Back</span><i class="fa fa-angle-right ps-2" aria-hidden="true"></i></div>
                                 </li>
                                 <li class="sidebar-list">
-                                    <a class="sidebar-link sidebar-title" href="index.html">
+                                    <a class="sidebar-link sidebar-title" href="AdminIndex">
                                         <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                                             <g>
                                                 <g>
@@ -160,7 +160,7 @@
 
                                 </li>
                                 <li class="sidebar-list">
-                                    <a class="sidebar-link sidebar-title" href="users-list.html">
+                                    <a class="sidebar-link sidebar-title" href="add-chapters">
                                         <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                                             <g>
                                                 <g>
@@ -170,13 +170,13 @@
                                                     <path d="M17.4608 13.6536C19.4488 13.6536 21.1468 15.0016 21.1468 16.2046C21.1468 16.9136 20.5618 17.6416 19.6718 17.8506" stroke="#130F26" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
                                                 </g>
                                             </g>
-                                        </svg><span>Users List</span>
+                                        </svg><span>Chapters</span>
                                     </a>
 
                                 </li>
 
                                 <li class="sidebar-list">
-                                    <a class="sidebar-link sidebar-title" href="user-info.html">
+                                    <a class="sidebar-link sidebar-title" href="add-videos">
                                         <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                                             <g>
                                                 <g>
@@ -185,13 +185,13 @@
                                                     <path d="M12.0045 8.5H11.9955" stroke="#130F26" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
                                                 </g>
                                             </g>
-                                        </svg><span>User Info</span>
+                                        </svg><span>Videos</span>
                                     </a>
 
                                 </li>
 
                                 <li class="sidebar-list">
-                                    <a class="sidebar-link sidebar-title" href="withdrawal-request.html">
+                                    <a class="sidebar-link sidebar-title" href="Add-Businessideas">
                                         <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                                             <g>
                                                 <g>
@@ -199,7 +199,7 @@
                                                     <path fill-rule="evenodd" clip-rule="evenodd" d="M11.9702 2.5C5.58324 2.5 4.50424 3.432 4.50424 10.929C4.50424 19.322 4.34724 21.5 5.94324 21.5C7.53824 21.5 10.1432 17.816 11.9702 17.816C13.7972 17.816 16.4022 21.5 17.9972 21.5C19.5932 21.5 19.4362 19.322 19.4362 10.929C19.4362 3.432 18.3572 2.5 11.9702 2.5Z" stroke="#130F26" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
                                                 </g>
                                             </g>
-                                        </svg><span>Withdrawal Req.</span>
+                                        </svg><span>Bussiness Ideas</span>
                                     </a>
 
                                 </li>
