--- a/Vitkund/Views/Home/AddBusinessIdeas.cshtml
+++ b/Vitkund/Views/Home/AddBusinessIdeas.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model List<Vitkund.Models.tblBusinessidea>
 @{
     ViewBag.Title = "AddBusinessIdeas";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
@@ -29,7 +29,7 @@
                             <div class="card-options"><a class="card-options-collapse" href="#" data-bs-toggle="card-collapse"><i class="fe fe-chevron-up"></i></a><a class="card-options-remove" href="#" data-bs-toggle="card-remove"><i class="fe fe-x"></i></a></div>
                         </div>
                         <div class="card-body">
-                            
+
                             <div class="col-sm-4">
                                 <div class="mb-3">
                                     <label>Event Title</label>
@@ -49,11 +49,11 @@
                                 </div>
                             </div>
                             @*@using (Html.BeginForm("UploadImage", "Home", FormMethod.Post, new { enctype = "multipart/form-data", id = "myForm" }))
-            {*@
+                                {*@
                             <div class="col-sm-4">
                                 <div class="mb-3">
-                                    <label>Upload Image/Video</label>
-                                    <input class="form-control" id="imageuploader" type="file" accept="image/png, image/gif, image/jpeg, video/mp4">
+                                    <label>Upload Image</label>
+                                    <input class="form-control" id="imageuploader" type="file" accept="image/png, image/jpeg">
                                 </div>
 
                             </div>
@@ -64,6 +64,54 @@
 
                         </div>
                     </form>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
+
+    <div class="container-fluid">
+        <div class="page-title">
+            <div class="row">
+                <div class="col-12 col-sm-6">
+                    <h3>Business Ideas</h3>
+                </div>
+
+            </div>
+        </div>
+    </div>
+
+
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-sm-12">
+                <div class="card">
+                    <div class="my-gallery card-body" itemscope="" data-pswp-uid="1">
+                        <div class="row my-gallery gallery-with-description" itemscope="" data-pswp-uid="2">
+                            @foreach (var item1 in Model)
+                            {
+                                <figure class="col-xl-3 col-6 xl-33" itemprop="associatedMedia" itemscope="">
+                                    <div style="float:right; margin-right:38px;">
+                                        <a class="icon-wrapper" href="javascript:void(0);" onclick="DeleteVideo(@item1.Id)"><i class="icofont icofont-trash"></i></a>
+                                    </div>
+                                    <a href="!#">
+                                        <img src="~/Content/Uploads/@item1.Image" itemprop="thumbnail" alt="Image description">
+                                        <div class="caption">
+                                            <h4>@item1.Title</h4>
+                                            <span class="clsshortdescription">@item1.ShortDescription</span>
+                                        </div>
+                                    </a>
+
+                                </figure>
+                            }
+
+
+
+                        </div>
+
+                    </div>
                 </div>
             </div>
         </div>
@@ -135,13 +183,43 @@
             success: function (result) {
                 debugger
                 if (result.message == "Data saved successfully") {
-                    $("#successaddedh3").show();
-                    setTimeout(function () { window.location.reload() }, 1000);
+                    alert(result.message);
+                    window.location.reload();
                 }
             },
             error: function (result) {
             }
         });
+
+    }
+
+
+    function DeleteVideo(elm) {
+
+        var result = confirm("Want to delete?");
+        if (result) {
+            debugger
+            $.ajax({
+                type: 'POST',
+                url: '@Url.Action("DeleteBusinessIdea", "Home")',
+                data: JSON.stringify({ Id: elm }),
+                traditional: true,
+                contentType: 'application/json; charset=utf-8',
+                datatype:'json',
+                success: function (response) {
+                    debugger
+                    if (response.message == "Data Deleted successfully") {
+                        alert(response.message);
+                        window.location.reload();
+                    }
+                },
+                error: function (error) {
+                    // Handle errors
+                    console.log(error);
+                }
+            });
+        }
+
 
     }
 </script>
