--- a/Vitkund/Views/Home/Videos.cshtml
+++ b/Vitkund/Views/Home/Videos.cshtml
@@ -134,10 +134,34 @@
                                                 {
                                                     <div class="col-lg-3">
                                                         <div class="video-popup-wrapper">
+                                                            @if (item2.VideoImage != null)
+                                                            {
+
+
+                                                                if (item2.VideoImage.Contains("Content"))
+                                                                {
                                                             <img class="w-100 rbt-radius" src="@item2.VideoImage" alt="Video Images">
-                                                            <a class="rbt-btn rounded-player popup-video position-to-top rbtplayer" href="@item2.VideoFile" style="max-width:50px; max-height:50px;">
-                                                                <span><i class="feather-play"></i></span>
-                                                            </a>
+                                                                }
+                                                                else
+                                                                {
+                                                            <img class="w-100 rbt-radius" src="~/Content/Uploads/@item2.VideoImage" alt="Video Images">
+
+                                                                }
+                                                            if (item2.VideoFile.Contains("Content"))
+                                                            {
+                                                                <a class="rbt-btn rounded-player popup-video position-to-top rbtplayer" href="@item2.VideoFile" style="max-width:50px; max-height:50px;">
+
+                                                                    <span><i class="feather-play"></i></span>
+                                                                </a>
+                                                            }
+                                                            else
+                                                            {
+                                                                <a class="rbt-btn rounded-player popup-video position-to-top rbtplayer" href="~/Content/Uploads/@item2.VideoFile" style="max-width:50px; max-height:50px;">
+                                                                    <span><i class="feather-play"></i></span>
+                                                                </a>
+                                                            }
+                                                            }
+
                                                             <h6 class="title" style="padding-top:10px;">@item2.FileTitle</h6>
                                                         </div>
                                                     </div>
