--- a/Vitkund/Views/Home/BusinessIdeas.cshtml
+++ b/Vitkund/Views/Home/BusinessIdeas.cshtml
@@ -237,13 +237,18 @@
                     @if (Model != null)
                     {
                         foreach (var item in Model)
-                        {<!-- Start Single Card  -->
-                            <div class="course-grid-3">
+                        {<!-- Start Single Card  --><div class="course-grid-3">
                                 <div class="rbt-card variation-01 rbt-hover">
                                     <div class="rbt-card-img">
                                         <a href="#">
+                                            @if (@item.Image.Contains("Content"))
+                                            {
+                                            <img src="@item.Image" alt="Card image">
+                                            }
+                                            else
+                                            {
                                             <img src="~/Content/Uploads/@item.Image" alt="Card image">
-                                            <div class="rbt-badge-3 bg-white">
+                                            }                                     <div class="rbt-badge-3 bg-white">
                                                 <span>-40%</span>
                                                 <span>Off</span>
                                             </div>
