--- a/Vitkund/Views/Home/AddVideos.cshtml
+++ b/Vitkund/Views/Home/AddVideos.cshtml
@@ -6,23 +6,17 @@
 
 <h2>Add Videos</h2>
 <div class="page-body">
-    <div class="container-fluid">
-        <div class="page-title">
-            <div class="row">
-                <div class="col-12 col-sm-6">
-                    <h4><b>Videos</b></h4>
-                </div>
-
-            </div>
-        </div>
-    </div>
+    
     <!-- Container-fluid starts-->
     <div class="container-fluid">
         <div class="edit-profile">
             <div class="row">
                 <div class="col-xl-12">
                     <form class="card">
-
+                        <div class="card-header pb-0">
+                            <h5 class="card-title mb-0">Add Videos</h5>
+                            <div class="card-options"><a class="card-options-collapse" href="#" data-bs-toggle="card-collapse"><i class="fe fe-chevron-up"></i></a><a class="card-options-remove" href="#" data-bs-toggle="card-remove"><i class="fe fe-x"></i></a></div>
+                        </div>
                         <div class="card-body">
                             <h3 style="text-align:center;margin:0 0 12px 0;display:none" id="successaddedh3">Data Saved Successfully</h3>
                             <div class="row">
@@ -63,11 +57,11 @@
                                         <label>Upload Video File</label>
                                         <input class="form-control" id="Videouploader" type="file" accept="video/mp4">
                                         @*<div class="dropzone dz-clickable" id="singleFileUpload" action="/upload.php">
-                                                <div class="dz-message needsclick">
-                                                    <i class="icon-cloud-up"></i>
-                                                    <h6>Drop files here or click to upload.</h6><span class="note needsclick">(This is just a demo dropzone. Selected files are <strong>not</strong> actually uploaded.)</span>
-                                                </div>
-                                            </div>*@
+                            <div class="dz-message needsclick">
+                                <i class="icon-cloud-up"></i>
+                                <h6>Drop files here or click to upload.</h6><span class="note needsclick">(This is just a demo dropzone. Selected files are <strong>not</strong> actually uploaded.)</span>
+                            </div>
+                        </div>*@
                                     </div>
                                 </div>
 
