--- a/Vitkund/Views/Home/Vitkund.cshtml
+++ b/Vitkund/Views/Home/Vitkund.cshtml
@@ -80,13 +80,13 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="breadcrumb-inner text-center">
-                        <h2 class="title">Vit Kund</h2>
+                        <h2 class="title">Vitkund Gaon </h2>
                         <ul class="page-list">
                             <li class="rbt-breadcrumb-item"><a href="index">Home</a></li>
                             <li>
                                 <div class="icon-right"><i class="feather-chevron-right"></i></div>
                             </li>
-                            <li class="rbt-breadcrumb-item active">Vit Kund</li>
+                            <li class="rbt-breadcrumb-item active">Vitkund Gaon </li>
                         </ul>
                     </div>
                 </div>
