--- a/Vitkund/Views/Shared/_AdminLayout.cshtml
+++ b/Vitkund/Views/Shared/_AdminLayout.cshtml
@@ -203,21 +203,7 @@
                                     </a>
 
                                 </li>
-                                <li class="sidebar-list">
-                                    <a class="sidebar-link sidebar-title" href="recharge-list.html">
-                                        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                            <g>
-                                                <g>
-                                                    <path d="M15.596 15.6963H8.37598" stroke="#130F26" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
-                                                    <path d="M15.596 11.9365H8.37598" stroke="#130F26" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
-                                                    <path d="M11.1312 8.17725H8.37622" stroke="#130F26" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
-                                                    <path fill-rule="evenodd" clip-rule="evenodd" d="M3.61011 12C3.61011 18.937 5.70811 21.25 12.0011 21.25C18.2951 21.25 20.3921 18.937 20.3921 12C20.3921 5.063 18.2951 2.75 12.0011 2.75C5.70811 2.75 3.61011 5.063 3.61011 12Z" stroke="#130F26" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
-                                                </g>
-                                            </g>
-                                        </svg><span>Recharge List</span>
-                                    </a>
-
-                                </li>
+                               
                                 <li class="sidebar-list">
                                     <a class="sidebar-link sidebar-title" href="index.html">
                                         <i data-feather="log-out"> </i><span>Logout</span>
@@ -237,7 +223,7 @@
                 <div class="container-fluid">
                     <div class="row">
                         <div class="col-md-12 footer-copyright text-center">
-                            <p class="mb-0">Copyright 2022 © My Gigstar  </p>
+                            <p class="mb-0">Copyright 2023 © Vitkund  </p>
                         </div>
                     </div>
                 </div>
